# gdr-copy

./: CMakeLists.txt  README.md  bench.md
bench/: bench.cpp  bench_dual_gdr_h2d.cpp
include/: gdr_copy.h
scripts/: build.sh  install_deps.sh
src/: demo.cpp  gdr_copy.cpp
